Add Swaggo on Photo
