# handler/rest/photoRestHandler.go
@@ -19,6 +19,17 @@ func NewPhotoRestHandler(photoService service.PhotoService) *photoRestHandler {
 	return &photoRestHandler{photoService: photoService}
 }
 
+// PostPhoto godoc
+// @Schemes http
+// @Tags Photos
+// @Description Post Photo based on token user
+// @Param        RequestBody   body      dto.PhotoRequest  true  "User Request"
+// @Accept json
+// @Produce json
+// @Success 201 {object} dto.PhotoResponse
+// @Failure 422 {object} object
+// @param Authorization header string true "Authorization" default(Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImFAYS5jb20iLCJleHAiOjE2NjYyODU5MzYsImlkIjoyfQ.ahlQ3Icb2h72Aam9jWgZFM-TultwjKzymM7DGKHVVKU)
+// @Router /photos [post]
 func (p *photoRestHandler) PostPhoto(c *gin.Context) {
 	var photoRequest dto.PhotoRequest
 	var err error
@@ -60,6 +71,16 @@ func (p *photoRestHandler) PostPhoto(c *gin.Context) {
 	c.JSON(http.StatusCreated, photo)
 }
 
+// GetAllPhotos godoc
+// @Schemes http
+// @Tags Photos
+// @Description Get All Photos based on token user
+// @Accept json
+// @Produce json
+// @Success 200 {array} dto.GetPhotoResponse
+// @Failure 403 {object} object
+// @param Authorization header string true "Authorization" default(Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImFAYS5jb20iLCJleHAiOjE2NjYyODU5MzYsImlkIjoyfQ.ahlQ3Icb2h72Aam9jWgZFM-TultwjKzymM7DGKHVVKU)
+// @Router /photos [get]
 func (p *photoRestHandler) GetAllPhotos(c *gin.Context) {
 	var userData entity.User
 	if value, ok := c.MustGet("userData").(entity.User); !ok {
@@ -84,6 +105,18 @@ func (p *photoRestHandler) GetAllPhotos(c *gin.Context) {
 	c.JSON(http.StatusOK, photos)
 }
 
+// UpdatePhoto godoc
+// @Schemes http
+// @Tags Photos
+// @Description Update Photo based on token user with paramId of photoId
+// @Param        RequestBody   body      dto.PhotoRequest  true  "User Request"
+// @Accept json
+// @Produce json
+// @Success 202 {object} dto.PhotoUpdateResponse
+// @Failure 403 {object} object
+// @Param Authorization header string true "Authorization" default(Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImFAYS5jb20iLCJleHAiOjE2NjYyODU5MzYsImlkIjoyfQ.ahlQ3Icb2h72Aam9jWgZFM-TultwjKzymM7DGKHVVKU)
+// @Param photoID path string true "Photo ID" default(1)
+// @Router /photos/{photoID} [put]
 func (p *photoRestHandler) UpdatePhoto(c *gin.Context) {
 	var photoRequest dto.PhotoRequest
 	var err error
@@ -123,6 +156,17 @@ func (p *photoRestHandler) UpdatePhoto(c *gin.Context) {
 	c.JSON(http.StatusAccepted, photo)
 }
 
+// DeletePhoto godoc
+// @Schemes http
+// @Tags Photos
+// @Description Delete Photo based on token user with paramId of photoId
+// @Param photoID path string true "Photo ID" default(2)
+// @Accept json
+// @Produce json
+// @Success 200 {object} dto.DeletePhotoResponse
+// @Failure 403 {object} object
+// @param Authorization header string true "Authorization" default(Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImFAYS5jb20iLCJleHAiOjE2NjYyODU5MzYsImlkIjoyfQ.ahlQ3Icb2h72Aam9jWgZFM-TultwjKzymM7DGKHVVKU)
+// @Router /photos/{photoID} [delete]
 func (p *photoRestHandler) DeletePhoto(c *gin.Context) {
 	photoIdParam, err := helpers.GetParamId(c, "photoID")
 	if err != nil {
